--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +62,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/image 6.jpg
+     - assets/Ellipse 48 (3).png
+     - assets/Rectangle 29.png
+     - assets/Img_box.png
+     - assets/Camera.png
+     - assets/Group 12655.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
