--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,20 @@ flutter:
      - assets/Twitter.png
      - assets/Instagram.png
      - assets/Headphones_fill.png
+     - assets/Group 12680.png
+     - assets/Group 12653.png
+     - assets/Group 12655 (2).png
+     - assets/Vector (1).png
+     - assets/Rectangle 18818.png
+     - assets/View_alt.png
+     - assets/Group 3.png
+     - assets/+.png
+     - assets/Group 12688.png
+     - assets/Rupee (INR).png
+     - assets/Rectangle 18823.png
+     - assets/+ (1).png
+     - assets/Group 12636.png
+     - assets/Img_load_box_fill.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
