--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,6 +88,11 @@ flutter:
      - assets/+ (1).png
      - assets/Group 12636.png
      - assets/Img_load_box_fill.png
+     - assets/Rectangle 18828.png
+     - assets/image 5 (1).png
+     - assets/Rectangle 18828 (1).png
+     - assets/Rectangle 18828 (2).png
+     - assets/Rectangle 18828 (3).png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
