--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,6 +93,12 @@ flutter:
      - assets/Rectangle 18828 (1).png
      - assets/Rectangle 18828 (2).png
      - assets/Rectangle 18828 (3).png
+     - assets/Ellipse (1).png
+     - assets/Group 12557.png
+     - assets/User.png
+     - assets/Bag.png
+     - assets/Group_add_light.png
+     - assets/Setting_line.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
