--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -113,6 +113,14 @@ flutter:
      - assets/Ellipse (10).png
      - assets/Ellipse (11).png
      - assets/Ellipse (12).png
+     - assets/Rectangle 18829.png
+     - assets/30986 1.png
+     - assets/Group.png
+     - assets/543320 1.png
+     - assets/phone_duotone_line.png
+     - assets/Ellipse (15).png
+     - assets/Group 12595.png
+     - assets/Rectangle 18823 (1).png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
