--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -121,6 +121,11 @@ flutter:
      - assets/Ellipse (15).png
      - assets/Group 12595.png
      - assets/Rectangle 18823 (1).png
+     - assets/Rectangle 18828 (4).png
+     - assets/Group 12702.png
+     - assets/Rectangle 18828 (7).png
+     - assets/fi-br-refresh.png
+     - assets/8101842 1.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
