--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -126,6 +126,20 @@ flutter:
      - assets/Rectangle 18828 (7).png
      - assets/fi-br-refresh.png
      - assets/8101842 1.png
+     - assets/icon _users_.png
+     - assets/icon _cart_.png
+     - assets/8099902 1.png
+     - assets/Shape.png
+     - assets/Shape (1).png
+     - assets/Wrapper.png
+     - assets/wepik-export-20230923052623lZGm 1.png
+     - assets/Rectangle 6.png
+     - assets/Rectangle 8.png
+     - assets/Rectangle 9.png
+     - assets/Rectangle 12.png
+     - assets/Rectangle 6 (1).png
+     - assets/Rectangle 8 (1).png
+     - assets/Ellipse 12.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
