--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -160,6 +160,10 @@ flutter:
      - assets/Group 12579.png
      - assets/Rectangle 18823 (2).png
      - assets/1-home-2.png
+     - assets/Ellipse 12 (1).png
+     - assets/Avatars.png
+     - assets/Group 8756 (1).png
+     - assets/Frame 1171275544.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
